fixe layout bugs #2

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -56,6 +56,7 @@
 
 html {
   box-sizing: border-box;
+  background-color: hsl(var(--clr-primary));
 }
 *,
 *::after,
